--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,15 +1,37 @@
 steps:
+
+# Pull the existing image
+
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'build', '-t', 'gcr.io/${PROJECT_ID}/${SERVICE_NAME}:$SHORT_SHA', '.' ]
+
+entrypoint: 'bash'
+
+args:
+
+- '-c'
+
+- |
+
+docker pull gcr.io/$PROJECT_ID/tomcat:latest || exit 0
+
+# Build a docker image
+
 - name: 'gcr.io/cloud-builders/docker'
-  args: [ 'push', 'gcr.io/${PROJECT_ID}/${SERVICE_NAME}:$SHORT_SHA']
+
+args: [ 'build', '-t', 'gcr.io/$PROJECT_ID/tomcat', '--cache-from', 'gcr.io/$PROJECT_ID/tomcat', '.' ]
+
+# Push the docker image to container registry
+
+- name: 'gcr.io/cloud-builders/docker'
+
+args: ["push", "gcr.io/$PROJECT_ID/tomcat"]
+
+# Deploy an image from Container Registry to Cloud Run
+
 - name: 'gcr.io/cloud-builders/gcloud'
-  args:
-    - 'run'
-    - 'deploy'
-    - '${SERVICE_NAME}'
-    - '--region=${REGION}'
-    - '--platform=managed'
-    - '--allow-unauthenticated'
-    - '--service-account=${SERVICE_ACCOUNT_EMAIL}'
-    - '--image=gcr.io/${PROJECT_ID}/${SERVICE_NAME}:$SHORT_SHA'
+
+args: ['beta', 'run', 'deploy', 'tomcat', '--image', 'gcr.io/$PROJECT_ID/tomcat:latest', '--region', 'europe-west1', '--platform', 'managed', '--allow-unauthenticated']
+
+images:
+
+- 'gcr.io/$PROJECT_ID/tomcat'
